--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^4.5.3",
     "fancybox": "^3.0.1",
     "jquery": "^3.5.1",
+    "jquery-nice-select": "^1.1.0",
     "magnific-popup": "^1.1.0",
     "normalize.css": "^8.0.1",
     "slick": "^1.12.2",
